MDEV-4603 mysql_stmt_reset returns "commands out of sync" error